--- a/03-Statistics.Rmd
+++ b/03-Statistics.Rmd
@@ -1,3 +1,378 @@
 # Statistical Distributions
 
+```{r initialstat, echo = FALSE, cache = FALSE, include = FALSE}
+library(knitr)
+opts_chunk$set(
+  warning = FALSE,
+  message = FALSE,
+  echo = TRUE,
+  fig.path = 'figure/',
+  cache.path = 'cache/',
+  fig.align = 'center',
+  fig.show = 'hold',
+  cache = FALSE,
+  external = TRUE,
+  dev = "png",
+  fig.height = 5,
+  fig.width = 10
+)
 
+
+library(tidyverse)
+library(ggpubr)
+
+```
+
+- Density, cumulative distribution function, quantile function and random variate generation for many standard probability distributions are available in the stats package.
+
+  - dxxx : functions for the density/mass function, 
+  - pxxx : cumulative distribution function 
+  - qxxx : quantile function 
+  - rxxx : random variable generation.
+  
+
+## pxxx
+
+**Cumulative distribution function (lower tail probability)**
+
+*Example : Standard normal distribution*
+
+- `pnorm(value-of-x-axis)` or `pnorm(quantile)`
+
+- `pnorm(0) = 0.5` (the area under the standard normal curve to the left of zero).
+
+```{r norm1, fig.cap="Standard normal distribution", echo=FALSE}
+set.seed(123)
+data <- data.frame(x= c(rnorm(1000000,0,1)) )
+
+dat <- with(density(data$x), data.frame(x, y))
+p<- ggplot(data = dat, mapping = aes(x = x, y = y)) +
+    geom_line()+
+    geom_area(mapping = aes(x = ifelse(x>-50 & x< 0 , x, 0)), fill = "darkblue") +
+    xlim(-5, 5)+
+  ylab("f(x)")+
+  ylim(0, 0.43)+
+  geom_vline(xintercept = 0, colour ="red")+
+    geom_text(aes(x=0, label="x=0", y=0.3), colour="red", angle=90, vjust = 1.2, text=element_text(size=4)) + 
+   geom_segment(aes(x = 0, y = 0, xend = 0, yend = 0.2), size=1, color="green")+
+  geom_segment(aes(x = 0, y = 0.2, xend = -0.7, yend = 0.2), arrow = arrow(length = unit(0.5, "cm")), size=1, color="green")
+
+print(p)
+```
+
+
+
+- `pnorm(1.281552) = 0.9000` (the area under the standard normal curve to the left of 1.281).
+
+```{r norm2, fig.cap="Standard normal distribution", echo=FALSE}
+set.seed(123)
+data <- data.frame(x= c(rnorm(1000000,0,1)) )
+
+dat <- with(density(data$x), data.frame(x, y))
+p<- ggplot(data = dat, mapping = aes(x = x, y = y)) +
+    geom_line()+
+    geom_area(mapping = aes(x = ifelse(x>-50 & x< 1.281 , x, 0)), fill = "darkblue") +
+    xlim(-5, 5)+
+  ylab("f(x)")+
+  ylim(0, 0.43)+
+  geom_vline(xintercept = 1.281, colour ="red") +
+  geom_text(aes(x=1.281, label="x=1.281", y=0.3), colour="red", angle=90, vjust = 1.2, text=element_text(size=4))+
+  geom_segment(aes(x = 1.281, y = 0, xend = 1.281, yend = 0.2), size=1, color="green")+
+  geom_segment(aes(x = 1.281, y = 0.2, xend = -0.2, yend = 0.2), arrow = arrow(length = unit(0.5, "cm")), size=1, color="green")
+
+print(p)
+```
+
+
+- The `pnorm` function also takes the argument `lower.tail`. If `lower.tail` is set equal to `FALSE` then `pnorm` returns the upper tail probability (*the integral from $q$ to $\infty$ of the pdf*) of the normal distribution. 
+
+- Note that 
+
+```{r}
+pnorm(1.281552)
+
+pnorm(1.281552, lower.tail = TRUE)
+
+pnorm(1.281552, lower.tail = FALSE) 
+
+1-pnorm(1.281552, lower.tail = TRUE)
+```
+
+## qxxx
+
+*Example : Standard normal distribution*
+
+**The `qnorm` function is simply the inverse of the cdf, which you can also think of as the inverse of `pnorm`!**
+
+- `qnorm(probability)`
+
+- `qnorm(0.5) = 0`  (0 is the 50th percentile of the standard normal distribution)
+
+
+```{r norm1b, fig.cap="Standard normal distribution", echo=FALSE}
+set.seed(123)
+data <- data.frame(x= c(rnorm(1000000,0,1)) )
+
+dat <- with(density(data$x), data.frame(x, y))
+p<- ggplot(data = dat, mapping = aes(x = x, y = y)) +
+    geom_line()+
+    geom_area(mapping = aes(x = ifelse(x>-50 & x< 0 , x, 0)), fill = "darkblue") +
+    xlim(-5, 5)+
+  ylab("f(x)")+
+  ylim(0, 0.43)+
+  geom_vline(xintercept = 0, colour ="red")+
+    geom_text(aes(x=0, label="x= ???", y=0.3), colour="red", angle=90, vjust = 1.2, text=element_text(size=4)) +
+  geom_segment(aes(x = -0.7, y = 0.2, xend = 0, yend = 0.2), size=1, color="green")+
+  geom_segment(aes(x = 0, y = 0.2, xend = 0, yend = 0), arrow = arrow(length = unit(0.5, "cm")), size=1, color="green")
+
+print(p)
+```
+
+
+```{r}
+qnorm(0.5)
+
+qnorm(0.9)
+
+qnorm(0.1, lower.tail = FALSE)
+
+qnorm(0.9,  lower.tail = FALSE)
+```
+
+
+```{r norm3, fig.cap="Standard normal distribution", echo=FALSE}
+
+
+cuts <- data.frame(Ref = c("x= -1.281", "x= 0", "x= 1.281"),
+vals = c(-1.281, 0, 1.281),
+                   stringsAsFactors = FALSE)
+set.seed(123)
+data <- data.frame(x= c(rnorm(1000000,0,1)) )
+
+dat <- with(density(data$x), data.frame(x, y))
+p<- ggplot(data = dat, mapping = aes(x = x, y = y)) +
+    geom_line()+
+    xlim(-5, 5)+
+  ylab("f(x)")+
+  ylim(0, 0.43)+
+  geom_vline(mapping = aes(xintercept = vals, colour = Ref), data = cuts, show.legend = FALSE) +
+  geom_text(mapping = aes(x = vals, y = 0.02, label = Ref, angle=90, vjust = -1.3),data = cuts)
+  
+
+print(p)
+```
+
+
+
+## dxxx
+
+
+*Example : Standard normal distribution*
+
+**The function `dnorm` returns the value of the probability density function for the  normal distribution given parameters for $x$, $\mu$, and $\sigma$.**
+
+
+- `dnorm(0) == 1/sqrt(2*pi)`
+
+If $Z\sim N(0,1)$, then
+
+$$\phi_Z(z) = \frac{1}{\sqrt{2 \pi}}e^{-\frac{1}{2}z^2};\;\; -\infty< z< \infty$$
+
+
+$$\phi_Z(0) = \frac{1}{\sqrt{2 \pi}} =  0.3989423$$
+
+
+```{r}
+dnorm(0)
+
+1/sqrt(2*pi)
+```
+
+
+```{r norm4, fig.cap="Standard normal distribution", echo=FALSE}
+
+set.seed(123)
+data <- data.frame(x= c(rnorm(1000000,0,1)) )
+
+dat <- with(density(data$x), data.frame(x, y))
+p<- ggplot(data = dat, mapping = aes(x = x, y = y)) +
+    geom_line()+
+    xlim(-5, 5)+
+  ylab("f(x)")+
+  ylim(0, 0.43)+
+  geom_vline(xintercept = 0, colour ="red") +
+  geom_hline(yintercept = 0.3989423, colour ="red") +
+  geom_text(aes(x=0, label="(0, 0.3989)", y=0.3989423), colour="blue", vjust = -1.2) +
+  geom_segment(aes(x = 0, y = 0, xend = 0, yend = 0.3989), arrow = arrow(length = unit(0.5, "cm")), size=1, color="green")
+
+print(p)
+```
+
+
+
+$$\phi_Z(1) = \frac{1}{\sqrt{2 \pi}}e^{-\frac{1}{2}} =  0.3989423$$
+
+
+
+```{r}
+dnorm(1)
+
+(1/sqrt(2*pi)) * exp(-1/2)
+```
+
+
+
+```{r norm5, fig.cap="Standard normal distribution", echo=FALSE}
+
+set.seed(123)
+data <- data.frame(x= c(rnorm(1000000,0,1)) )
+
+dat <- with(density(data$x), data.frame(x, y))
+p<- ggplot(data = dat, mapping = aes(x = x, y = y)) +
+    geom_line()+
+    xlim(-5, 5)+
+  ylab("f(x)")+
+  ylim(0, 0.43)+
+  geom_vline(xintercept = 1, colour ="red") +
+  geom_hline(yintercept = 0.2419707, colour ="red") +
+  geom_text(aes(x=1, label="(1, 0.2419707)", y=0.2419707), colour="blue", vjust = -1.2)+
+  geom_segment(aes(x = 1, y = 0, xend = 1, yend = 0.2419707), arrow = arrow(length = unit(0.5, "cm")), size=1, color="green")
+
+print(p)
+```
+
+## rxxx
+
+*Example : Standard normal distribution*
+
+`rnorm(100)` generates 100 random deviates from a standard normal distribution.
+
+```{r}
+x <- rnorm(10)
+x
+hist(x)
+```
+
+```{r}
+y<- rnorm(1000)
+hist(y)
+
+```
+
+
+## Distributions in R
+
+
+Distribution | R name | Additional arguments
+-------------|---------|-------------
+beta         | `beta`    | `shape1, shape 2, ncp`
+binomial     | `binom`   | `size, prob`
+Cauchy       | `cauchy`  | `location, scale`
+chi-squared  | `chisq`   | `df, ncp`
+exponential  | `exp`     | `rate`
+F            |  `f`      | `df1, df2, ncp`
+gamma        | `gamma`   | `shape, scale`
+geometric    | `geom`    | `prob`
+hypergeometric | `hyper` | `m, n, k`  
+log-normal   | `lnorm`   | `meanlog, sdlog`
+logistic     | `logis`   | `location, scale`
+negative binomial  | `nbinom` | `size, prob`
+normal       | `norm`    | `mean, sd`
+Poisson      | `pois`    | `lambda`
+signed rank  | `signrank` | `n`
+Student’s t  | `t`        | `df, ncp`
+uniform      | `unif`     | `min, max`
+Weibull      | `weibull`  | `shape, scale`
+Wilcoxon     | `wilcox`   | `m, n`
+
+## Exercise
+
+### Normal
+
+```{r norm6, fig.cap="Standard normal distribution", echo=FALSE}
+
+set.seed(123)
+data <- data.frame(x= c(rnorm(1000000,2,1)) )
+
+dat <- with(density(data$x), data.frame(x, y))
+p<- ggplot(data = dat, mapping = aes(x = x, y = y)) +
+    geom_line()+
+    xlim(-2, 6)+
+  ylab("f(x)")+
+  ylim(0, 0.43)+
+  geom_vline(xintercept = 2, colour ="red") +
+  ggtitle("N(1,2)")
+
+print(p)
+```
+
+
+```{r, eval = FALSE}
+# ?dnorm - Help page
+
+dnorm(2, mean = 2, sd = 1, log = FALSE)
+pnorm(2, mean = 2, sd = 1, lower.tail = TRUE, log.p = FALSE)
+qnorm(0.5, mean = 2, sd = 1, lower.tail = TRUE, log.p = FALSE)
+rnorm(n=10, mean = 2, sd = 1)
+```
+
+
+```{r}
+# ?dnorm - Help page
+
+dnorm(2, mean = 2, sd = 1, log = FALSE)
+pnorm(2, mean = 2, sd = 1, lower.tail = TRUE, log.p = FALSE)
+qnorm(0.5, mean = 2, sd = 1, lower.tail = TRUE, log.p = FALSE)
+rnorm(n=10, mean = 2, sd = 1)
+```
+
+
+### Gamma
+
+```{r gamma, fig.cap="Standard normal distribution", echo=FALSE}
+
+set.seed(123)
+data <- data.frame(x= c(rgamma(1000000,shape = 2, scale =1/3)) )
+
+dat <- with(density(data$x), data.frame(x, y))
+p<- ggplot(data = dat, mapping = aes(x = x, y = y)) +
+    geom_line()+
+    xlim(0, 6)+
+  ylab("f(x)")+
+  ylim(0, 1.5)+
+  ggtitle("gamma(2,3)")+geom_vline(xintercept = 1, color = "blue")
+
+print(p)
+```
+
+
+
+```{r eval = FALSE}
+dgamma(1, shape =2, scale = 1/3, log = FALSE)
+pgamma(1, shape =2, scale = 1/3, lower.tail = TRUE,
+       log.p = FALSE)
+qgamma(0.8, shape = 2,  scale = 1/3, lower.tail = TRUE,
+       log.p = FALSE)
+rgamma(10, shape =2 , scale = 1/3)
+
+```
+
+ 
+```{r}
+dgamma(1, shape =2, scale = 1/3, log = FALSE)
+pgamma(1, shape =2, scale = 1/3, lower.tail = TRUE,
+       log.p = FALSE)
+qgamma(0.8, shape = 2,  scale = 1/3, lower.tail = TRUE,
+       log.p = FALSE)
+rgamma(10, shape =2 , scale = 1/3)
+
+```
+
+\newpage
+
+## References
+
+Discrete 
+http://www.r-tutor.com/elementary-statistics/probability-distributions
+
+https://rstudio-pubs-static.s3.amazonaws.com/100906_8e3a32dd11c14b839468db756cee7400.html
